Change in scaling method

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1121,
+   "execution_count": 1300,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1122,
+   "execution_count": 1301,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1123,
+   "execution_count": 1302,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1124,
+   "execution_count": 1303,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +331,7 @@
        "[5 rows x 2773 columns]"
       ]
      },
-     "execution_count": 1124,
+     "execution_count": 1303,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1125,
+   "execution_count": 1304,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "[5 rows x 2773 columns]"
       ]
      },
-     "execution_count": 1125,
+     "execution_count": 1304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1126,
+   "execution_count": 1305,
    "metadata": {},
    "outputs": [
     {
@@ -809,7 +809,7 @@
        "[5 rows x 2773 columns]"
       ]
      },
-     "execution_count": 1126,
+     "execution_count": 1305,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1127,
+   "execution_count": 1306,
    "metadata": {},
    "outputs": [
     {
@@ -1046,7 +1046,7 @@
        "[5 rows x 2773 columns]"
       ]
      },
-     "execution_count": 1127,
+     "execution_count": 1306,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,7 +1080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1128,
+   "execution_count": 1307,
    "metadata": {},
    "outputs": [
     {
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1129,
+   "execution_count": 1308,
    "metadata": {},
    "outputs": [
     {
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1130,
+   "execution_count": 1309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1131,
+   "execution_count": 1310,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1184,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 1131,
+     "execution_count": 1310,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1132,
+   "execution_count": 1311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1230,7 +1230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1133,
+   "execution_count": 1312,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1261,7 +1261,7 @@
     "                                             ignore_index = True)\n",
     "\n",
     "# this will be the 20 tickers we will use in this study\n",
-    "tickers_final = df_corr_score.sort_values(by = [\"avg_corr\"], ascending = False).iloc[:100][\"ticker\"].values"
+    "tickers_final = df_corr_score.sort_values(by = [\"avg_corr\"], ascending = False).iloc[:150][\"ticker\"].values"
    ]
   },
   {
@@ -1273,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1134,
+   "execution_count": 1313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1296,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1135,
+   "execution_count": 1314,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1136,
+   "execution_count": 1315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,7 +1423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1137,
+   "execution_count": 1316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1455,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1138,
+   "execution_count": 1317,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1485,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1139,
+   "execution_count": 1318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1534,7 +1534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1140,
+   "execution_count": 1319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1562,7 +1562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1141,
+   "execution_count": 1320,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1142,
+   "execution_count": 1321,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1143,
+   "execution_count": 1322,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1685,7 +1685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1144,
+   "execution_count": 1323,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1145,
+   "execution_count": 1324,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1756,7 +1756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1146,
+   "execution_count": 1325,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1773,7 +1773,8 @@
     "\n",
     "\n",
     "# list all the dataframes of interest\n",
-    "dfois = [df_open, df_high, df_low, df_close, df_volume, df_rtn, df_hl, df_target]\n",
+    "dfois = [df_close, df_volume, df_rtn, df_hl, df_target]\n",
+    "# dfois = [df_open, df_high, df_low, df_close, df_volume, df_rtn, df_hl, df_target]\n",
     "# dfois = [df_open, df_high, df_low, df_close,df_volume, df_ftr_rtn, df_rtn, df_hl,\n",
     "#          df_mfi, df_ema, df_rsi, df_stoch_k, df_stoch_d, df_macd, df_will_r, df_cci,\n",
     "#          df_ichi_a, df_ichi_b, df_ad, df_bbp, df_bb_diff, df_target]\n",
@@ -1783,6 +1784,7 @@
     "#          df_will_r, df_cci, df_ichi_a, df_ichi_b, df_bbp, df_bb_diff, df_target]\n",
     "\n",
     "# list all the dataframes of interest in string\n",
+    "dfois_str = ['df_close','df_volume', 'df_rtn', 'df_hl', 'df_target']\n",
     "dfois_str = ['df_open', 'df_high', 'df_low', 'df_close','df_volume', 'df_rtn', 'df_hl', 'df_target']\n",
     "# dfois_str = ['df_open', 'df_high', 'df_low', 'df_close','df_volume', 'df_ftr_rtn', 'df_rtn', 'df_hl',\n",
     "#          'df_mfi', 'df_ema', 'df_rsi', 'df_stoch_k', 'df_stoch_d', 'df_macd', 'df_will_r', 'df_cci',\n",
@@ -1795,7 +1797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1147,
+   "execution_count": 1326,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1806,7 +1808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1148,
+   "execution_count": 1327,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1823,7 +1825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1149,
+   "execution_count": 1328,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1845,7 +1847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1150,
+   "execution_count": 1329,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1861,7 +1863,9 @@
     "    index_eval = dfois_eval[i].index\n",
     "    \n",
     "    # Fit scale\n",
-    "    scaler.fit(dfois_train[i])\n",
+    "    flat_arr = dfois_train[i].values.reshape(dfois_train[i].shape[0]*dfois_train[i].shape[1],1)\n",
+    "    # scaler.fit(dfois_train[i].values)\n",
+    "    scaler.fit(np.tile(flat_arr, dfois_train[i].shape[1]))\n",
     "    \n",
     "    # Trasform\n",
     "    train_data = scaler.transform(dfois_train[i])\n",
@@ -1876,7 +1880,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1151,
+   "execution_count": 1330,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1916,7 +1920,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1152,
+   "execution_count": 1331,
    "metadata": {},
    "outputs": [
     {
@@ -1933,7 +1937,7 @@
     "# scale all data\n",
     "sequential_data_train = sequence_data(dfois_train)\n",
     "sequential_data_eval = sequence_data(dfois_eval)\n",
-    "sequential_data_test = scale_data(dfois_test)\n",
+    "sequential_data_test = sequence_data(dfois_test)\n",
     "\n",
     "# print the length\n",
     "print(len(sequential_data_train))\n",
@@ -1943,7 +1947,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1153,
+   "execution_count": 1332,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1981,7 +1985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1154,
+   "execution_count": 1333,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1992,7 +1996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1155,
+   "execution_count": 1334,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2036,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1335,
    "metadata": {},
    "outputs": [
     {
@@ -2045,7 +2049,22 @@
      "text": [
       "Train on 45524 samples, validate on 6012 samples\n",
       "Epoch 1/10\n",
-      "44544/45524 [============================>.] - ETA: 19s - loss: 0.7213 - acc: 0.5035"
+      "  512/45524 [..............................] - ETA: 51:09 - loss: 0.9268 - acc: 0.4727"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1335-fb66b196f0ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mbatch_size\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mBATCH_SIZE\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mepochs\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mEPOCHS\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m     \u001b[0mvalidation_data\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvalidation_x\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvalidation_y\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      7\u001b[0m )\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training.py\u001b[0m in \u001b[0;36mfit\u001b[1;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, **kwargs)\u001b[0m\n\u001b[0;32m   1361\u001b[0m           \u001b[0minitial_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0minitial_epoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1362\u001b[0m           \u001b[0msteps_per_epoch\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0msteps_per_epoch\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1363\u001b[1;33m           validation_steps=validation_steps)\n\u001b[0m\u001b[0;32m   1364\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1365\u001b[0m   def evaluate(self,\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\engine\\training_arrays.py\u001b[0m in \u001b[0;36mfit_loop\u001b[1;34m(model, inputs, targets, sample_weights, batch_size, epochs, verbose, callbacks, val_inputs, val_targets, val_sample_weights, shuffle, callback_metrics, initial_epoch, steps_per_epoch, validation_steps)\u001b[0m\n\u001b[0;32m    262\u001b[0m           \u001b[0mins_batch\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mins_batch\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtoarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 264\u001b[1;33m         \u001b[0mouts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mins_batch\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    265\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mouts\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    266\u001b[0m           \u001b[0mouts\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[0mouts\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\keras\\backend.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, inputs)\u001b[0m\n\u001b[0;32m   2912\u001b[0m       \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_make_callable\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfeed_arrays\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfeed_symbols\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msymbol_vals\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0msession\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2913\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2914\u001b[1;33m     \u001b[0mfetched\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_callable_fn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0marray_vals\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2915\u001b[0m     \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_call_fetch_callbacks\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfetched\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_fetches\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2916\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0mfetched\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0moutputs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\tensorflow\\python\\client\\session.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1380\u001b[0m           ret = tf_session.TF_SessionRunCallable(\n\u001b[0;32m   1381\u001b[0m               \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_session\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_handle\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mstatus\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1382\u001b[1;33m               run_metadata_ptr)\n\u001b[0m\u001b[0;32m   1383\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mrun_metadata\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1384\u001b[0m           \u001b[0mproto_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mtf_session\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mTF_GetBuffer\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrun_metadata_ptr\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
