--- a/solution.ipynb
+++ b/solution.ipynb
@@ -11,6 +11,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This file can also be found on: https://github.com/arvindrajan92/financial-time-series-prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 1. Data processing"
    ]
   },
