--- a/solution.ipynb
+++ b/solution.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This file can also be found on: https://github.com/arvindrajan92/financial-time-series-prediction"
+    "This file can also be found on: https://github.com/arvindrajan92/financial-time-series-prediction."
    ]
   },
   {
