Correction to notebook

--- a/solution.ipynb
+++ b/solution.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 338,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3094,7 +3094,7 @@
     "plt.barh((pnl_lstm/150*100).index,(pnl_lstm/150*100).values, label = \"LSTM\", align='edge', height=0.25)\n",
     "plt.barh((pnl/cnt_rf*100).index + timedelta(hours=6),(pnl/cnt_rf*100).values, label = \"Random Forest\", align='edge', height=0.25)\n",
     "plt.barh((pnl2/cnt_hybrid*100).index + timedelta(hours=12), (pnl2/cnt_hybrid*100).values, label = \"Hybrid\", align='edge', height=0.25)\n",
-    "plt.xlabel('Number of trades')\n",
+    "plt.xlabel('ROI (%)')\n",
     "plt.ylabel('Trading dates')\n",
     "plt.title('Graph of return on investment (%) per day for different strategies')\n",
     "plt.legend()\n",
